# rust-mini-projects

p1-port-sniffer-cli/: Cargo.toml
p1-port-sniffer-cli/src/: main.rs
p2-snake-game/: Cargo.toml
p2-snake-game/src/: draw.rs  game.rs  main.rs  snake.rs
p5-iron-web-api/: Cargo.toml
p5-iron-web-api/src/: main.rs  models.rs
