[package]
name = "p5-iron-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.9.0"
chrono = { version = "0.4.19", features = ["rustc-serialize"] }
serde = { version = "1.0.138", features = ["derive"]}
uuid = "1.1.2"